# SyntheSize_py

./: .gitignore  Makefile  README.md  processed_train_136_full_model_data.csv  pyproject.toml  setup.py  synthesize-2025-12.qmd  synthesize.ipynb  tools.py
Case/: processed_train_136_full_model_data.csv  processed_train_136_full_model_data_epochES_batch01_CVAE1-5_generated.csv  processed_train_136_full_model_data_epochES_batch01_CVAE1-5_loss.csv
archive/: OldExample.ipynb
data/: LIHCSubtypeFamInd_DESeq_metric_real.csv
docs/source/: conf.py  datasets.rst  evals.rst  index.rst  methods.rst  synthesize.ipynb  usage.rst
synthesize/: PRADSubtype_icd_o_3_histology_metric_generated.csv  PRADSubtype_icd_o_3_histology_metric_real.csv  __init__.py  core.py  metric_generated_30.csv  metric_real_30.csv  synthesize.ipynb  tools.py
synthesize.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
synthesize/.ipynb_checkpoints/: synthesize-checkpoint.ipynb  tools-checkpoint.py
synthesize/Case/: PRADSubtype_icd_o_3_histology_test.csv
synthesize/code-archive/: synthesize-2025-12.ipynb
synthesize/data/: LIHCSubtypeFamInd_DESeq_metric_generated.csv
