[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthesize"
version = "2.2.1"
description = "A Python package for synthetic data generation"
readme = "README.md"
requires-python = ">=3.6"

dependencies = [
    "torch>=1.3.1",
    "pandas>=1.0.5",
    "seaborn>=0.9.0",
    "numpy>=1.19.1",
    "pathlib2>=2.3.2",
    "scipy>=1.4.1",
    "matplotlib>=2.2.3",
    "tqdm>=4.26.0",
    "tensorboardX>=2.5.0",
    "umap-learn>=0.5.6",
    "scikit-learn",
    "xgboost",
]

[tool.setuptools]
packages = ["synthesize", "synthesize.Case"]
include-package-data = true

[tool.setuptools.package-data]
"synthesize.Case" = ["*.csv"]
"synthesize" = ["*.csv"]
