[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthesize"
version = "2.3.0"
description = "A Python package for optimizing sample size in supervised machine learning with bulk transcriptomic sequencing data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Yunhui Qi"},
    {name = "Xinyi Wang"},
    {name = "Li-Xuan Qin"},
    {name = "Yannick Dueren"},
]
keywords = ["machine-learning", "sample-size", "transcriptomics", "bioinformatics", "classification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "torch>=1.3.1",
    "pandas>=1.0.5",
    "seaborn>=0.9.0",
    "numpy>=1.19.1",
    "scipy>=1.4.1",
    "matplotlib>=2.2.3",
    "tqdm>=4.26.0",
    "tensorboardX>=2.5.0",
    "umap-learn>=0.5.6",
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "nbsphinx>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/LXQin/SyntheSize_py"
Documentation = "https://github.com/LXQin/SyntheSize_py/tree/main/docs"
Repository = "https://github.com/LXQin/SyntheSize_py"
"Research Paper" = "https://pmc.ncbi.nlm.nih.gov/articles/PMC11899567/"

[tool.setuptools]
packages = ["synthesize", "synthesize.Case"]
include-package-data = true

[tool.setuptools.package-data]
"synthesize.Case" = ["*.csv"]
"synthesize" = ["*.csv"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
